// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductList/> should be list product should have the same ui structure with five product 1`] = `
<div
  className="card-deck mb-3 text-center"
>
  <ProductCard
    brand="coca cola"
    description="bebida"
    id={1}
    image="uriimage"
    key="1"
    price={10}
    priceHaveDiscount={false}
    priceWithOutDiscount={0}
  />
  <ProductCard
    brand="pepsi"
    description="bebida"
    id={2}
    image="uriimage1"
    key="2"
    price={10}
    priceHaveDiscount={false}
    priceWithOutDiscount={0}
  />
  <ProductCard
    brand="fanta"
    description="bebida"
    id={3}
    image="uriimage2"
    key="3"
    price={10}
    priceHaveDiscount={false}
    priceWithOutDiscount={0}
  />
  <ProductCard
    brand="sprite"
    description="bebida"
    id={4}
    image="uriimage3"
    key="4"
    price={10}
    priceHaveDiscount={false}
    priceWithOutDiscount={0}
  />
  <ProductCard
    brand="bilz"
    description="bebida"
    id={5}
    image="uriimage4"
    key="5"
    price={10}
    priceHaveDiscount={false}
    priceWithOutDiscount={0}
  />
</div>
`;

exports[`<ProductList/> should be list product should have the same ui structure with one product 1`] = `
<div
  className="card-deck mb-3 text-center"
>
  <ProductCard
    brand="coca cola"
    description="bebida"
    id={1}
    image="uriimage"
    key="1"
    price={10}
    priceHaveDiscount={false}
    priceWithOutDiscount={0}
  />
</div>
`;
